# neoai

./: .gitignore  Justfile  README.md  package-lock.json  package.json  pnpm-lock.yaml
src/: App.css  App.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: acp_client.rs  app_config.rs  database.rs  ghostty_embed.rs  lib.rs  nvim_bridge.rs  socket_manager.rs  tmux_runtime.rs
src/components/: Ghostty.tsx
src/components/AiChat/: AiChat.css  AiChat.tsx  ChatInput.tsx  ChatMessage.tsx  ContextBadge.tsx  DiffPreview.tsx
src/components/ProjectExplorer/: BranchBadge.tsx  DiffStats.tsx  FolderItem.tsx  PRIndicator.tsx  ProjectExplorer.css  ProjectExplorer.tsx  ProjectItem.tsx  ProjectList.tsx  icons.tsx  index.ts
src/components/ProjectPicker/: ProjectPicker.css  ProjectPicker.tsx
src/hooks/: useAcpAgent.ts  useAiChat.ts  useLocalStorage.ts  useNvimBridge.ts  useProjectExplorer.ts  useSessionManager.ts  useTerminalManager.ts
src/types/: acp.ts  ai-chat.ts  nvim.ts  project-explorer.ts
src/utils/: migrateLocalStorage.ts
