[package]
name = "neoai"
version = "0.1.0"
description = "neoai desktop app"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "neoai_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-mcp-bridge = { version = "0.8", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
raw-window-handle = "0.6"
tokio = { version = "1", features = ["net", "sync", "rt", "macros", "process", "io-util"] }
nvim-rs = { version = "0.9", features = ["use_tokio"] }
rmpv = { version = "1", features = ["with-serde"] }
agent-client-protocol = "0.9"
async-trait = "0.1"
tokio-util = { version = "0.7", features = ["compat"] }
log = "0.4"
libc = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
sha2 = "0.10"
hex = "0.4"
flate2 = "1"
tar = "0.4"
zip = "0.6"

[target.'cfg(target_os = "macos")'.dependencies]
ghostty-sys = "0.1.1"
objc2 = { version = "0.5.2", default-features = false, features = ["alloc", "std"] }
objc2-app-kit = { version = "0.2.2", default-features = false, features = ["std", "NSApplication", "NSRunningApplication", "NSGraphics", "NSWindow", "NSView", "NSEvent", "NSResponder", "NSTrackingArea", "objc2-quartz-core"] }
objc2-foundation = { version = "0.2.2", default-features = false, features = ["std", "block2", "NSObject", "NSThread", "NSRunLoop", "NSTimer", "NSDate", "NSString", "NSGeometry", "NSNotification", "NSObjCRuntime"] }
block2 = { version = "0.5.1", default-features = false, features = ["std"] }
objc2-quartz-core = { version = "0.2.2", default-features = false, features = ["std", "CALayer"] }

[features]
default = []
mcp-debug = ["tauri-plugin-mcp-bridge"]
